--- a/src/app/root.less
+++ b/src/app/root.less
@@ -27,6 +27,7 @@
     // scrollbar colors
     --scrollbar-background-color: rgba(21, 23, 21, 1);
     --scrollbar-thumb-color: rgb(134, 134, 134);
+    --scrollbar-thumb-hover-color: rgb(211, 215, 207);
 
     // code color
     --pre-bg-color: rgb(0, 0, 0);
