--- a/src/app/workspace/cmdinput/cmdinput.less
+++ b/src/app/workspace/cmdinput/cmdinput.less
@@ -276,7 +276,6 @@
         color: var(--app-text-color);
         font-family: var(--termfontfamily);
         font-size: var(--termfontsize);
-        margin-bottom: 5px;
         overflow: auto;
         flex-shrink: 1;
 
